# py_cosmograph

./: .buildinfo  .gitignore  DEVELOPMENT.md  MANIFEST.in  README.md  SCREENSHOT_IMPLEMENTATION_SUMMARY.md  create-meta-file.cjs  eslint.config.js  genindex.html  index.html  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html  tsconfig.json
.github/workflows/: ci.yml
_modules/: index.html
_modules/cosmograph/: _code_sync.html  _resources.html  _traitlets_util.html  base.html  util.html
_modules/cosmograph/tests/: base_test.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: cosmograph.rst.txt
_sources/module_docs/cosmograph/: _code_sync.rst.txt  _resources.rst.txt  _traitlets_util.rst.txt  base.rst.txt  scrap.rst.txt  tests.rst.txt  util.rst.txt  validation.rst.txt
_sources/module_docs/cosmograph/tests/: base_test.rst.txt  datagen.rst.txt
_static/: toggleprompt.js
cosmograph/: __about__.py  __init__.py  _code_sync.py  _old_util.py  _resources.py  _traitlets_util.py  base.py  config.py  cosmos_config.json  cosmos_config.py  datasrc.py  gen.py  js_bridge.py  scrap.py  screenshot.py  source.py  trans.py  util.py  validation.py
cosmograph/_dev_utils/: DEV_UTILS_README.md  REFRESH_SSOT_SUMMARY.md  __init__.py  _code_sync.py  _color_util.py  _resources.py  _traitlets_util.py  refresh_ssot.py
cosmograph/_dev_utils/data/: color_names.json
cosmograph/_dev_utils/data/config_prep/: parsed_defaults.json  parsed_types.json
cosmograph/_dev_utils/data/legacy/: _widget_config.json  _widget_config_from_md.json
cosmograph/data/: __source_strings.json  _color_table.parquet  color_names.json  config_info.json  cosmos_config.json  nikita_config.json  params_ssot.json
cosmograph/data/config_prep/: parsed_descriptions.json  parsed_types.json  source_strings.json
cosmograph/datasrc/: __init__.py  minidot.py
cosmograph/dev_utils/: _color_util.py  _old_util.py  _resources.py  scrap.py
cosmograph/js/: _js_mk_api_methods.js  _js_mk_new_canvas_and_cosmos_instance.js  cosmos-iife-bundle.js  interface.js  js-py-bridge.js  mk_api_methods.js  mk_canvas_and_graphs_containers.js  mk_containers_and_graphs.js  mk_new_container_and_graph.js  scrap.js  test01.js
cosmograph/js/old/: cosmos-iife-bundle.js  mk_canvas_and_graphs_containers.js  mk_new_canvas_and_cosmos_instance.js
cosmograph/tests/: __init__.py  base_test.py  datagen.py  test_js_bridge.py
cosmograph/widget/: .gitignore  README.md  __init__.py  package.json  pyproject.toml  utils.py  vite.config.js
cosmograph/widget/export_project/: __init__.py  config.py  create_project.py  prepare_parquet.py  upload_file.py
cosmograph/widget/js/: helper.ts  widget.ts
cosmograph/widget/notebooks/: 10x100-metadata.csv  10x100-records.csv  example.ipynb
cosmograph/wip/: config_properties.py
demos/: colab_Clusters_in_Cosmograph_Widget.ipynb  colab_Cosmograph_Widget_Metadata.ipynb  colab_Cosmograph_Widget_Real_Time_Adjustment.ipynb  colab_Cosmograph_Widget_Timeline.ipynb  colab_English_Words.ipynb  colab_Mobius_in_Cosmograph_Widget.ipynb  harris_vs_trump_debate.ipynb  new_years_resolutions.ipynb  readme_nicer_example.ipynb  readme_tiny_example.ipynb  small_graphs.ipynb
docsrc/: conf.py  index.rst
js/: config-props.json  config-props.ts  cosmograph-data.ts  helper.ts  legends.ts  widget-elements.ts  widget.css  widget.ts  widget.tsx
js/components/: control-buttons.ts  control-buttons.tsx  link-timeline.ts  point-info.ts  point-info.tsx  point-timeline.ts  settings-panel.ts  settings-panel.tsx
misc/: Test cosmo config.ipynb  bak.ipynb  cosmo_2025_enhancements.ipynb  cosmo_tests.ipynb  cosmo_widget_facade_wip.ipynb  cosmograph design notes.ipynb  defining_sot_for_config_properties.ipynb  defining_ssot_for_config_properties.ipynb  old_starter_notebook.ipynb  scrap.ipynb
misc/html example/: cosmograph-iife-bundle.js  index.html
misc/scripts/: windows_cosmo_check.bat
module_docs/: cosmograph.html
module_docs/cosmograph/: _code_sync.html  _resources.html  _traitlets_util.html  base.html  scrap.html  tests.html  util.html  validation.html
module_docs/cosmograph/tests/: base_test.html  datagen.html
src/cosmograph/: __about__.py  __init__.py  base.py  util.py  validation.py
src/cosmograph/_dev_utils/data/: _color_table.parquet
tests/: __init__.py  base_test.py  datagen.py
(+1 files in other folders)
