[metadata]
name = cosmograph
version = 0.0.18
url = https://github.com/cosmograph-org/py_cosmograph
platforms = any
description_file = README.md
description = Binder to the cosmograph visual analytics for big graphs
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = cosmograph

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	i2
	dol
	pandas
	numpy
	linked
	tabled
	cosmograph_widget
	traitlets

[options.package_data]
cosmograph = data/*

