[metadata]
name = cosmograph
version = 0.0.27
url = https://github.com/cosmograph-org/py_cosmograph
platforms = any
description_file = README.md
description = Visualize large-scale network graphs and machine learning embeddings
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		Graph
		Embedding
		Network
		Visualization
		Machine Learning
display_name = Cosmograph
license = GPL

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	cosmograph_widget
	i2
	dol
	pandas
	numpy
	tabled
	traitlets
	ju

[options.package_data]
cosmograph = data/*

[options.extras_require]
test = 
	linked

