[metadata]
name = cosmograph
version = 0.0.28
url = https://github.com/cosmograph-org/py_cosmograph
platforms = any
description_file = README.md
description = Visualize large-scale network graphs and machine learning embeddings
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		Graph
		Embedding
		Network
		Visualization
		Machine Learning
display_name = Cosmograph
license = GPL

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	pandas
	numpy
	traitlets
	cosmograph_widget>=0.0.1b0
	i2>=0.1.45
	dol>=0.2.94
	tabled>=0.1.17
	ju>=0.1.16

[options.package_data]
cosmograph = data/*

[options.extras_require]
test = 
	linked

