[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmograph"
version = "0.0.0"
dependencies = ["anywidget"]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["cosmograph/static/*"]

[tool.hatch.build.targets.wheel]
packages = ["cosmograph"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["cosmograph/static/widget.mjs"]
skip-if-exists = ["cosmograph/static/widget.mjs"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
